--- a/NetCoreFundamentos/NetCoreFundamentos.csproj
+++ b/NetCoreFundamentos/NetCoreFundamentos.csproj
@@ -8,4 +8,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Include="C:\Users\Alumnos MCSD Mañana\Desktop\Form16ListDelegados.Designer.cs" Link="Form16ListDelegados.Designer.cs" />
+    <Compile Include="C:\Users\Alumnos MCSD Mañana\Desktop\Form19TablaMultiplicar.cs" Link="Form19TablaMultiplicar.cs" />
+  </ItemGroup>
+
 </Project>
